[project]
name = "community-assistant"
version = "0.1.0"
description = "Multi-agent Discord assistant for the Code with Ahsan community, powered by Google ADK."
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.0.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["community_assistant"]
